# sentinel

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.infra.yml  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/alert-service/: Dockerfile  go.mod  go.sum  jest.config.ts  project.json  tsconfig.app.json
apps/analytics-service/: Dockerfile  pyproject.toml
apps/analytics-service/sentinel_analytics/: config.py  db.py  main.py
apps/analytics-service/sentinel_analytics/models/: entity.py
apps/analytics-service/sentinel_analytics/routers/: analytics.py  health.py
apps/analytics-service/sentinel_analytics/services/: anomaly_detection.py  entity_classifier.py  kafka_consumer.py  pattern_of_life.py  predictive.py
apps/api-gateway/: Dockerfile  jest.config.ts  project.json  tsconfig.app.json  tsconfig.spec.json
apps/entity-service/: Dockerfile  go.mod  go.sum  jest.config.ts  project.json  tsconfig.json  tsconfig.spec.json
apps/ingest-service/: Dockerfile  go.mod  go.sum  project.json
apps/link-analysis-service/: Dockerfile  go.mod  go.sum  jest.config.ts  project.json  tsconfig.app.json
apps/search-service/: Dockerfile  go.mod  go.sum  jest.config.ts  project.json  tsconfig.spec.json
apps/track-service/: Dockerfile  (+4 more)
docs/: api-gateway.md  architecture.md  data-model.md  development.md  frontend.md  infrastructure.md
proto/: alert.proto  buf.gen.go.yaml  buf.gen.python.yaml  buf.gen.ts.yaml  buf.gen.yaml  buf.yaml  common.proto  entity.proto  link.proto  track.proto
scripts/: seed-data.ts
(+372 files in other folders)
